--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 									<li><a href="#about" class="popup-menu_item">ABOUT</a></li>
 									<li><a href="#skill" class="popup-menu_item">SKILL</a></li>
 									<li><a href="#experience" class="popup-menu_item">EXPERIENCE</a></li>
-									<li><a href="#mywork" class="popup-menu_item">MY WORK</a></li>
+									<li><a href="#work" class="popup-menu_item">MY WORK</a></li>
 									<li><a href="#contact" class="popup-menu_item">CONTACT</a></li>
 								</ul>
 							</div>
