網頁內容更新/細節調整

--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Document</title>
+	<title>個人簡歷-網頁版</title>
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css">
 	<link rel="stylesheet" href="./css/main.css">
+	<link rel="shortcut icon" href="./images/favicon.ico" />
+	<link rel="bookmark" href="./images/favicon.ico" />
 </head>
 <body>
 
@@ -16,9 +18,9 @@
 			<div class="container">
 				<div class="navbar p-0 navbarCollapse">
 					<div class="social-bar navbar_socialBar">
-						<a href="#" class="icon-btn"><i class="icon fab fa-facebook-square"></i></a>
-						<a href="#" class="icon-btn"><i class="icon fab fa-pinterest-square"></i></a>
-						<a href="#" class="icon-btn"><i class="icon fab fa-behance"></i></a>
+						<a href="https://github.com/iian0910" class="icon-btn"><i class="icon fab fa-facebook-square"></i></a>
+						<a href="https://github.com/iian0910" class="icon-btn"><i class="icon fab fa-pinterest-square"></i></a>
+						<a href="https://github.com/iian0910" class="icon-btn"><i class="icon fab fa-github-square"></i></a>
 					</div>
 					<div class="nav">
 						<a href="#popup-overlay" class="menu-toggle">
@@ -48,7 +50,6 @@
 			</div>
 		</header>
 		<section class="main">
-			<!-- START ABOUT -->
 			<div class="hero">
 				<img src="./images/parallax_graphic/tri-blue.svg"
 					data-stellar-ratio="1.5"
@@ -64,9 +65,8 @@
 					<a href="#contact" class="btn btn-primary hero_btn">Contact</a>
 				</div>
 			</div>
-			<!-- END ABOUT -->
 
-			<!-- START QUOTE -->
+			<!-- START ABOUT -->
 			<div class="quote lean-bg--top lean-bg--no-margin" id="about">
 				<img src="./images/parallax_graphic/tri-purple.svg"
 					data-stellar-ratio="1.5"
@@ -90,7 +90,7 @@
 					</div>
 				</div>
 			</div>
-			<!-- END QUOTE -->
+			<!-- END ABOUT -->
 
 			<!-- START SKILL -->
 			<div class="skill lean-bg--bottom" id="skill">
@@ -105,8 +105,8 @@
 							<div class="col-md-6">
 								<div class="skill_card">
 									<div class="skill_card_inner">
-										<h4 class="skill_card_inner_title">HTML</h4>
-										<p class="skill_card_inner_text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod nemo corrupti eveniet odio beatae maiores ipsam, et culpa inventore repellat ut recusandae, minima aperiam. Accusamus atque sequi deserunt itaque distinctio.</p>
+										<h4 class="skill_card_inner_title">PS/AI</h4>
+										<p class="skill_card_inner_text">網頁建置初期，使用PhotoShop或是Illustrator來設計，當然也可穿插交互搭配使用。運用Photoshop的圖片編輯能力加上Illustrator向量圖檔，讓整個網頁視覺的呈現上不在是單一元素。</p>
 									</div>
 									<div class="skill_card_icon">
 										<img class="image" src="./images/skill_icon/html-icon.png" alt="skill html">
@@ -116,10 +116,8 @@
 							<div class="col-md-6">
 								<div class="skill_card">
 									<div class="skill_card_inner">
-										<h4 class="skill_card_inner_title">CSS</h4>
-										<p class="skill_card_inner_text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod nemo corrupti
-											eveniet odio beatae maiores ipsam, et culpa inventore repellat ut recusandae, minima aperiam. Accusamus atque
-											sequi deserunt itaque distinctio.</p>
+										<h4 class="skill_card_inner_title">HTML</h4>
+										<p class="skill_card_inner_text">使用HTML來建立網頁的骨架，在搭配CSS以及JS來讓整個網頁繽紛了起來。在建立網頁外，若在網頁中加入一些分析工具的JS代碼以及meta標籤，即可分析進站人的相關資訊，也利於提升網頁在搜尋上更加優化。</p>
 									</div>
 									<div class="skill_card_icon">
 										<img class="image" src="./images/skill_icon/css-icon.png" alt="skill CSS">
@@ -131,10 +129,8 @@
 							<div class="col-md-6">
 								<div class="skill_card">
 									<div class="skill_card_inner">
-										<h4 class="skill_card_inner_title">SKETCH</h4>
-										<p class="skill_card_inner_text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod nemo corrupti
-											eveniet odio beatae maiores ipsam, et culpa inventore repellat ut recusandae, minima aperiam. Accusamus atque
-											sequi deserunt itaque distinctio.</p>
+										<h4 class="skill_card_inner_title">CSS</h4>
+										<p class="skill_card_inner_text">使用CSS來建立網頁的外觀，以及微互動。可模組化設定，讓同一標籤設定相同的樣式。寫作手法多種，但都是朝著模組化且易於管理來制定。SASS為CSS前置處理的寫法，可以搭配變數來操控CSS，使得重複的數值不必一再填寫。</p>
 									</div>
 									<div class="skill_card_icon">
 										<img class="image" src="./images/skill_icon/sketch-icon.png" alt="skill sketch">
@@ -144,10 +140,8 @@
 							<div class="col-md-6">
 								<div class="skill_card">
 									<div class="skill_card_inner">
-										<h4 class="skill_card_inner_title">Adobe Illustrator</h4>
-										<p class="skill_card_inner_text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod nemo corrupti
-											eveniet odio beatae maiores ipsam, et culpa inventore repellat ut recusandae, minima aperiam. Accusamus atque
-											sequi deserunt itaque distinctio.</p>
+										<h4 class="skill_card_inner_title">JS</h4>
+										<p class="skill_card_inner_text">使用JS來建立網頁的互動性，滾動、點擊、滑入等等。由JS為首，延伸出來的語法使用也很熱門，如JQuery/Node.js/Vue.js等等，不同的地方使用不同的語法來撰寫，也製作出不同的效果。</p>
 									</div>
 									<div class="skill_card_icon">
 										<img class="image" src="./images/skill_icon/ai-icon.png" alt="skill ai">
@@ -162,7 +156,7 @@
 
 			<!-- START EXPERIENCE -->
 			<div class="experience" id="experience">
-				<img src="./images/parallax_graphic/cir-purple-lg.svg" data-stellar-ratio="1.5" class="graphic_007 d-none d-md-block" alt="">
+				<!-- <img src="./images/parallax_graphic/cir-purple-lg.svg" data-stellar-ratio="1.5" class="graphic_007 d-none d-md-block" alt=""> -->
 				<img src="./images/parallax_graphic/dot-grey.svg" data-stellar-ratio="1.5" class="graphic_008" alt="">
 				<img src="./images/parallax_graphic/cir-pink-sm.svg" data-stellar-ratio="1.5" class="graphic_009" alt="">
 				<img src="./images/parallax_graphic/dot-blue.svg" data-stellar-ratio="1.5" class="graphic_010" alt="">
@@ -173,28 +167,28 @@
 						<div class="timeline_cards">
 							<div class="timeline_cards_row">
 								<div class="timeline_card">
-									<p class="timeline_card_text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magnam repudiandae nesciunt ea placeat. Vel, eligendi? Quasi vitae similique quis blanditiis enim itaque exercitationem eveniet iure alias voluptatem in, omnis fugiat!</p>
+									<h3 class="timeline_card_title">私立開南商職<span>2008/06-2011/06</span></h3>
+									<p class="timeline_card_position text-right text-secondary">─ 資料處理科</p>
 								</div>
 							</div>
 							<div class="timeline_cards_row">
 								<div class="timeline_card">
-									<p class="timeline_card_text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magnam repudiandae nesciunt
-										ea placeat. Vel, eligendi? Quasi vitae similique quis blanditiis enim itaque exercitationem eveniet iure alias
-										voluptatem in, omnis fugiat!</p>
+									<h3 class="timeline_card_title">國立台灣科技大學<span>2011/06-2015/06</span></h3>
+									<p class="timeline_card_position text-right text-secondary">─ 資訊管理系</p>
 								</div>
 							</div>
 							<div class="timeline_cards_row">
 								<div class="timeline_card">
-									<p class="timeline_card_text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magnam repudiandae nesciunt
-										ea placeat. Vel, eligendi? Quasi vitae similique quis blanditiis enim itaque exercitationem eveniet iure alias
-										voluptatem in, omnis fugiat!</p>
+									<h3 class="timeline_card_title">神坊資訊<span>2015/08-2017/07</span></h3>
+									<p class="timeline_card_text">官網的維護運作、協助製作網頁切板並完成官網上各尺寸所需之Banner素材。</p>
+									<p class="timeline_card_position text-right text-secondary">─ 網頁設計師助理</p>
 								</div>
 							</div>
 							<div class="timeline_cards_row">
 								<div class="timeline_card">
-									<p class="timeline_card_text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magnam repudiandae nesciunt
-										ea placeat. Vel, eligendi? Quasi vitae similique quis blanditiis enim itaque exercitationem eveniet iure alias
-										voluptatem in, omnis fugiat!</p>
+									<h3 class="timeline_card_title">三貝德數位文創<span>2017/08-2020/03</span></h3>
+									<p class="timeline_card_text">官網的維護運作、製作各專案網頁圖檔並切板。<br>製作官網、活動專案上各尺寸所需之Banner素材。<br>跨部門溝通協調，製作出符合需求之頁面版型。</p>
+									<p class="timeline_card_position text-right text-secondary">─ 網頁設計師</p>
 								</div>
 							</div>
 						</div>
@@ -334,7 +328,7 @@
 					<h2 class="subTitle">CONTACT</h2>
 					<form class="form">
 						<label for="userName">Name</label>
-						<input type="text" class="form-control" id="userName" placeholder="Email">
+						<input type="text" class="form-control" id="userName">
 						<div class="form-row">
 							<div class="form-group col-md-6">
 								<label for="userTel">Phone</label>
@@ -360,9 +354,9 @@
 						</div>
 						<div class="info_phone">0972523407</div>
 						<div class="social-bar info_social-bar">
-							<a href="#" class="icon-btn"><i class="icon fab fa-facebook-square"></i></a>
-							<a href="#" class="icon-btn"><i class="icon fab fa-pinterest-square"></i></a>
-							<a href="#" class="icon-btn"><i class="icon fab fa-behance"></i></a>
+							<a href="https://github.com/iian0910" class="icon-btn"><i class="icon fab fa-facebook-square"></i></a>
+							<a href="https://github.com/iian0910" class="icon-btn"><i class="icon fab fa-pinterest-square"></i></a>
+							<a href="https://github.com/iian0910" class="icon-btn"><i class="icon fab fa-github-square"></i></a>
 						</div>
 					</div>
 				</div>
@@ -371,7 +365,6 @@
 		</section>
 		<footer class="footer">
 			<div class="container">
-				<p class="footer_text mb-2">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatibus tempora, ratione repellendus officiis nostrum fuga accusamus, minima dignissimos necessitatibus temporibus libero? In reprehenderit illum dolores mollitia aliquam aspernatur expedita animi!</p>
 				<p class="footer_copyright">
 					Copyright © 2020 UI/UX web design
 				</p>
