--- a/index.html
+++ b/index.html
@@ -79,12 +79,10 @@
 								<div class="quote_icon">
 									<i class="fas fa-quote-right"></i>
 								</div>
-								<p class="quote_text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptates obcaecati sit minus quasi
-									voluptatem veniam officiis animi architecto qui, sequi debitis maiores minima et consequatur expedita quo vitae iste
-									veritatis.</p>
-								<div class="quote_name">
-									<span>Somebody-</span>from somewhere
-								</div>
+								<p class="quote_text">畢業於資訊管理系，因為在高職求學期間接觸了網頁設計，開啟了我對網頁設計領域感興趣的開關。大學畢業後找了網頁設計的相關職務，由於初入職場所以由助理開始做起，助理做了兩年後我換到新的公司開始擔任網頁設計師。邊做邊學，一步步把自己的技能建立的比較完整，在這過程中也額外花了時間學習一些新的網頁技能(Vue.js / Git / Gulp等等)。邊做邊學，學以致用，這是我最想達到的最大目標。而最希望的就是能從網頁設計師透過學習能夠讓實力越來越堅強，成為一位優秀的前端工程師。</p>
+								<!-- <div class="quote_name">
+									<span>求職者-</span>范宗勝
+								</div> -->
 							</div>
 						</div>
 					</div>
@@ -109,7 +107,7 @@
 										<p class="skill_card_inner_text">網頁建置初期，使用PhotoShop或是Illustrator來設計，當然也可穿插交互搭配使用。運用Photoshop的圖片編輯能力加上Illustrator向量圖檔，讓整個網頁視覺的呈現上不在是單一元素。</p>
 									</div>
 									<div class="skill_card_icon">
-										<img class="image" src="./images/skill_icon/html-icon.png" alt="skill html">
+										<img class="image" src="./images/skill_icon/ai-icon.png" alt="skill html">
 									</div>
 								</div>
 							</div>
@@ -120,7 +118,7 @@
 										<p class="skill_card_inner_text">使用HTML來建立網頁的骨架，在搭配CSS以及JS來讓整個網頁繽紛了起來。在建立網頁外，若在網頁中加入一些分析工具的JS代碼以及meta標籤，即可分析進站人的相關資訊，也利於提升網頁在搜尋上更加優化。</p>
 									</div>
 									<div class="skill_card_icon">
-										<img class="image" src="./images/skill_icon/css-icon.png" alt="skill CSS">
+										<img class="image" src="./images/skill_icon/html-icon.png" alt="skill CSS">
 									</div>
 								</div>
 							</div>
@@ -133,7 +131,7 @@
 										<p class="skill_card_inner_text">使用CSS來建立網頁的外觀，以及微互動。可模組化設定，讓同一標籤設定相同的樣式。寫作手法多種，但都是朝著模組化且易於管理來制定。SASS為CSS前置處理的寫法，可以搭配變數來操控CSS，使得重複的數值不必一再填寫。</p>
 									</div>
 									<div class="skill_card_icon">
-										<img class="image" src="./images/skill_icon/sketch-icon.png" alt="skill sketch">
+										<img class="image" src="./images/skill_icon/css-icon.png" alt="skill sketch">
 									</div>
 								</div>
 							</div>
@@ -144,7 +142,7 @@
 										<p class="skill_card_inner_text">使用JS來建立網頁的互動性，滾動、點擊、滑入等等。由JS為首，延伸出來的語法使用也很熱門，如JQuery/Node.js/Vue.js等等，不同的地方使用不同的語法來撰寫，也製作出不同的效果。</p>
 									</div>
 									<div class="skill_card_icon">
-										<img class="image" src="./images/skill_icon/ai-icon.png" alt="skill ai">
+										<img class="image" src="./images/skill_icon/js-icon.png" alt="skill ai">
 									</div>
 								</div>
 							</div>
