新增部分作品

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 			<div class="container">
 				<div class="navbar p-0 navbarCollapse">
 					<div class="social-bar navbar_socialBar">
-						<a href="https://github.com/iian0910" class="icon-btn"><i class="icon fab fa-facebook-square"></i></a>
-						<a href="https://github.com/iian0910" class="icon-btn"><i class="icon fab fa-pinterest-square"></i></a>
+						<a href="https://dribbble.com/IanFan" class="icon-btn"><i class="icon fab fa-dribbble-square"></i></a>
+						<a href="https://www.pinterest.com/ian810910/" class="icon-btn"><i class="icon fab fa-pinterest-square"></i></a>
 						<a href="https://github.com/iian0910" class="icon-btn"><i class="icon fab fa-github-square"></i></a>
 					</div>
 					<div class="nav">
@@ -166,13 +166,13 @@
 							<div class="timeline_cards_row">
 								<div class="timeline_card">
 									<h3 class="timeline_card_title">私立開南商職<span>2008/06-2011/06</span></h3>
-									<p class="timeline_card_position text-right text-secondary">─ 資料處理科</p>
+									<p class="timeline_card_position text-right text-secondary">─ 資料處理科 畢業</p>
 								</div>
 							</div>
 							<div class="timeline_cards_row">
 								<div class="timeline_card">
 									<h3 class="timeline_card_title">國立台灣科技大學<span>2011/06-2015/06</span></h3>
-									<p class="timeline_card_position text-right text-secondary">─ 資訊管理系</p>
+									<p class="timeline_card_position text-right text-secondary">─ 資訊管理系 畢業</p>
 								</div>
 							</div>
 							<div class="timeline_cards_row">
@@ -220,9 +220,9 @@
 								</div>
 								<div class="col-lg-4 work_float offset-lg-1">
 									<div class="work_item_text work_item_text--right">
-										<h3 class="work_item_text_title work_item_text_title--right">Work title for good design stuff</h3>
-										<p class="work_item_text_intro">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem inventore eum maiores atque culpa id, iure non amet provident illo, enim exercitationem necessitatibus cum molestiae nemo doloremque, sequi similique illum.</p>
-										<a href="#" class="text-btn text-btn_primary text-btn_lg">Show project</a>
+										<h3 class="work_item_text_title work_item_text_title--right">108新課綱將上路</h3>
+										<p class="work_item_text_intro">專案：108新課綱(十二年國教)<br>新課綱即將上路與九年一貫課綱差異在哪？<br>什麼又是「核心素養」？</p>
+										<a href="https://iian0910.github.io/108syllabus_project/" target="_blank" class="text-btn text-btn_primary text-btn_lg">Show project</a>
 									</div>
 								</div>
 							</div>
@@ -238,11 +238,9 @@
 								</div>
 								<div class="col-lg-4 work_float offset-lg-7">
 									<div class="work_item_text work_item_text--left">
-										<h3 class="work_item_text_title work_item_text_title--left">Work title for good design stuff</h3>
-										<p class="work_item_text_intro">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem inventore eum
-											maiores atque culpa id, iure non amet provident illo, enim exercitationem necessitatibus cum molestiae nemo
-											doloremque, sequi similique illum.</p>
-										<a href="#" class="text-btn text-btn_primary text-btn_lg">Show project</a>
+										<h3 class="work_item_text_title work_item_text_title--left">網頁改版 RWD</h3>
+										<p class="work_item_text_intro">專案：小學王網頁改版<br>為了利於提升有行動優化的網站在搜尋引擎上的排名以及符合時下跨載具的觀看便利性，於是將小學王原有的網站頁面RWD化。</p>
+										<a href="https://www.keys100.com.tw/index" target="_blank" class="text-btn text-btn_primary text-btn_lg">Show project</a>
 									</div>
 								</div>
 							</div>
@@ -258,11 +256,9 @@
 								</div>
 								<div class="col-lg-4 work_float offset-lg-1">
 									<div class="work_item_text work_item_text--left">
-										<h3 class="work_item_text_title">Work title for good design stuff</h3>
-										<p class="work_item_text_intro">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem inventore eum
-											maiores atque culpa id, iure non amet provident illo, enim exercitationem necessitatibus cum molestiae nemo
-											doloremque, sequi similique illum.</p>
-										<a href="#" class="text-btn text-btn_primary text-btn_lg">Show project</a>
+										<h3 class="work_item_text_title">Vue.js 模擬電商</h3>
+										<p class="work_item_text_intro">專案：Vue出一個模擬電商<br>感謝六角學院提供API供學員串接練習，學習Vue的過程中雖然有些續挫折，但也一一克服並熬了過來，最終完成了這個人的電商作品。</p>
+										<a href="https://iian0910.github.io/Vue_EC/dist/#/" target="_blank" class="text-btn text-btn_primary text-btn_lg">Show project</a>
 									</div>
 								</div>
 							</div>
@@ -287,7 +283,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="work_item">
+						<!-- <div class="work_item">
 							<div class="row">
 								<div class="col-lg-6 offset-lg-5">
 									<div class="imgbox">
@@ -306,11 +302,11 @@
 									</div>
 								</div>
 							</div>
-						</div>
+						</div> -->
 					</div>
-					<div class="btn_group text-center">
+					<!-- <div class="btn_group text-center">
 						<a href="#" class="btn work_btn">More</a>
-					</div>
+					</div> -->
 				</div>
 			</div>
 			<!-- END MY WORK -->
@@ -352,8 +348,8 @@
 						</div>
 						<div class="info_phone">0972523407</div>
 						<div class="social-bar info_social-bar">
-							<a href="https://github.com/iian0910" class="icon-btn"><i class="icon fab fa-facebook-square"></i></a>
-							<a href="https://github.com/iian0910" class="icon-btn"><i class="icon fab fa-pinterest-square"></i></a>
+							<a href="https://dribbble.com/IanFan" class="icon-btn"><i class="icon fab fa-dribbble-square"></i></a>
+							<a href="https://www.pinterest.com/ian810910/" class="icon-btn"><i class="icon fab fa-pinterest-square"></i></a>
 							<a href="https://github.com/iian0910" class="icon-btn"><i class="icon fab fa-github-square"></i></a>
 						</div>
 					</div>
