修改skill微互動

--- a/index.html
+++ b/index.html
@@ -220,9 +220,9 @@
 								</div>
 								<div class="col-lg-4 work_float offset-lg-1">
 									<div class="work_item_text work_item_text--right">
-										<h3 class="work_item_text_title work_item_text_title--right">108新課綱將上路</h3>
-										<p class="work_item_text_intro">專案：108新課綱(十二年國教)<br>新課綱即將上路與九年一貫課綱差異在哪？<br>什麼又是「核心素養」？</p>
-										<a href="https://iian0910.github.io/108syllabus_project/" target="_blank" class="text-btn text-btn_primary text-btn_lg">Show project</a>
+										<h3 class="work_item_text_title work_item_text_title--right">Vue.js 模擬電商</h3>
+										<p class="work_item_text_intro">專案：Vue出一個模擬電商<br>感謝六角學院提供API供學員串接練習，學習Vue的過程中雖然有些續挫折，但也一一克服並熬了過來，最終完成了這個人的電商作品。</p>
+										<a href="https://iian0910.github.io/Vue_EC/dist/#/" target="_blank" class="text-btn text-btn_primary text-btn_lg">Show project</a>
 									</div>
 								</div>
 							</div>
@@ -256,9 +256,9 @@
 								</div>
 								<div class="col-lg-4 work_float offset-lg-1">
 									<div class="work_item_text work_item_text--left">
-										<h3 class="work_item_text_title">Vue.js 模擬電商</h3>
-										<p class="work_item_text_intro">專案：Vue出一個模擬電商<br>感謝六角學院提供API供學員串接練習，學習Vue的過程中雖然有些續挫折，但也一一克服並熬了過來，最終完成了這個人的電商作品。</p>
-										<a href="https://iian0910.github.io/Vue_EC/dist/#/" target="_blank" class="text-btn text-btn_primary text-btn_lg">Show project</a>
+										<h3 class="work_item_text_title">108新課綱將上路</h3>
+										<p class="work_item_text_intro">專案：108新課綱(十二年國教)<br>新課綱即將上路與九年一貫課綱差異在哪？<br>什麼又是「核心素養」？</p>
+										<a href="https://iian0910.github.io/108syllabus_project/" target="_blank" class="text-btn text-btn_primary text-btn_lg">Show project</a>
 									</div>
 								</div>
 							</div>
