專案區塊完成/修改版頭人像

--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
 								<div class="col-lg-6 offset-lg-5">
 									<div class="imgbox">
 										<div class="imgbox_inner imgbox_inner_4-3">
-											<img style="background-image: url('./images/works/thumbnail/work001_thumb.jpg');" alt="" class="image">
+											<img style="background-image: url('./images/works/work001.jpg');" alt="" class="image">
 										</div>
 									</div>
 								</div>
@@ -232,7 +232,7 @@
 								<div class="col-lg-6 offset-lg-1">
 									<div class="imgbox">
 										<div class="imgbox_inner imgbox_inner_4-3">
-											<img style="background-image: url('./images/works/thumbnail/work002_thumb.jpg');" alt="" class="image">
+											<img style="background-image: url('./images/works/work002.jpg');" alt="" class="image">
 										</div>
 									</div>
 								</div>
@@ -250,7 +250,7 @@
 								<div class="col-lg-6 offset-lg-5">
 									<div class="imgbox">
 										<div class="imgbox_inner imgbox_inner_4-3">
-											<img style="background-image: url('./images/works/thumbnail/work003_thumb.jpg');" alt="" class="image">
+											<img style="background-image: url('./images/works/work003.jpg');" alt="" class="image">
 										</div>
 									</div>
 								</div>
@@ -268,41 +268,19 @@
 								<div class="col-lg-6 offset-lg-1">
 									<div class="imgbox">
 										<div class="imgbox_inner imgbox_inner_4-3">
-											<img style="background-image: url('./images/works/thumbnail/work004_thumb.jpg');" alt="" class="image">
+											<img style="background-image: url('./images/works/work004.jpg');" alt="" class="image">
 										</div>
 									</div>
 								</div>
 								<div class="col-lg-4 work_float offset-lg-7">
 									<div class="work_item_text work_item_text--left">
-										<h3 class="work_item_text_title">Work title for good design stuff</h3>
-										<p class="work_item_text_intro">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem inventore eum
-											maiores atque culpa id, iure non amet provident illo, enim exercitationem necessitatibus cum molestiae nemo
-											doloremque, sequi similique illum.</p>
-										<a href="#" class="text-btn text-btn_primary text-btn_lg">Show project</a>
+										<h3 class="work_item_text_title">國中先修課程</h3>
+										<p class="work_item_text_intro">專案：國中先修課程<br>提供國小五、六年級生，免費國中銜接先修線上課程，幫助打好基礎，輕鬆銜接國中，迎接未來的升學挑戰！</p>
+										<a href="https://www.go100.com.tw/pages/pre_junior_activity/index.html" target="_blank" class="text-btn text-btn_primary text-btn_lg">Show project</a>
 									</div>
 								</div>
 							</div>
 						</div>
-						<!-- <div class="work_item">
-							<div class="row">
-								<div class="col-lg-6 offset-lg-5">
-									<div class="imgbox">
-										<div class="imgbox_inner imgbox_inner_4-3">
-											<img style="background-image: url('./images/works/thumbnail/work005_thumb.jpg');" alt="" class="image">
-										</div>
-									</div>
-								</div>
-								<div class="col-lg-4 work_float offset-lg-1">
-									<div class="work_item_text work_item_text--right">
-										<h3 class="work_item_text_title work_item_text_title--right">Work title for good design stuff</h3>
-										<p class="work_item_text_intro">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem inventore eum
-											maiores atque culpa id, iure non amet provident illo, enim exercitationem necessitatibus cum molestiae nemo
-											doloremque, sequi similique illum.</p>
-										<a href="#" class="text-btn text-btn_primary text-btn_lg">Show project</a>
-									</div>
-								</div>
-							</div>
-						</div> -->
 					</div>
 					<!-- <div class="btn_group text-center">
 						<a href="#" class="btn work_btn">More</a>
