--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 				<div class="container">
 					<div class="row align-items-center">
 						<div class="col-md-6">
-							<img class="img img-fluid" src="https://fakeimg.pl/600x400/">
+							<img class="img img-fluid" src="./images/aboutImg.jpg">
 						</div>
 						<div class="col-md-6">
 							<div class="quote_content">
@@ -84,7 +84,7 @@
 								</div> -->
 								<p class="quote_text">畢業於資訊管理系，因為在高職求學期間接觸了網頁設計，開啟了我對網頁設計領域感興趣的開關。大學畢業後找了網頁設計的相關職務，由於初入職場所以由助理開始做起，助理做了兩年後我換到新的公司開始擔任網頁設計師。邊做邊學，一步步把自己的技能建立的比較完整，在這過程中也額外花了時間學習一些新的網頁技能(Vue.js / Git / Gulp等等)。邊做邊學，學以致用，這是我最想達到的最大目標。而最希望的就是能從網頁設計師透過學習能夠讓實力越來越堅強，成為一位優秀的前端工程師。</p>
 								<div class="quote_name text-right">
-									<span>求職者-</span>范宗勝
+									<span>范宗勝</span>
 								</div>
 							</div>
 						</div>
