--- a/index.html
+++ b/index.html
@@ -240,9 +240,9 @@
 								</div>
 								<div class="col-lg-4 work_float offset-lg-7">
 									<div class="work_item_text work_item_text--left">
-										<h3 class="work_item_text_title work_item_text_title--left">網頁改版 RWD</h3>
-										<p class="work_item_text_intro">專案：小學王網頁改版<br>為了利於提升有行動優化的網站在搜尋引擎上的排名以及符合時下跨載具的觀看便利性，於是將小學王原有的網站頁面RWD化。</p>
-										<a href="https://www.keys100.com.tw/index" target="_blank" class="text-btn text-btn_primary text-btn_lg">Show project</a>
+										<h3 class="work_item_text_title work_item_text_title--left">Firebase專案</h3>
+										<p class="work_item_text_intro">專案：BMI紀錄器<br>將輸入的資料傳到Firebase資料庫在將資料讀取，透過瀏覽器的locaStorage將資料儲存於瀏覽器，使用者每次打開的時候都可以看到過去所有的紀錄。</p>
+										<a href="https://iian0910.github.io/FirebaseProject-BMI/" target="_blank" class="text-btn text-btn_primary text-btn_lg">Show project</a>
 									</div>
 								</div>
 							</div>
@@ -258,9 +258,9 @@
 								</div>
 								<div class="col-lg-4 work_float offset-lg-1">
 									<div class="work_item_text work_item_text--left">
-										<h3 class="work_item_text_title">108新課綱將上路</h3>
-										<p class="work_item_text_intro">專案：108新課綱(十二年國教)<br>新課綱即將上路與九年一貫課綱差異在哪？<br>什麼又是「核心素養」？</p>
-										<a href="https://iian0910.github.io/108syllabus_project/" target="_blank" class="text-btn text-btn_primary text-btn_lg">Show project</a>
+										<h3 class="work_item_text_title">網頁改版 RWD</h3>
+										<p class="work_item_text_intro">專案：小學王網頁改版<br>為了利於提升有行動優化的網站在搜尋引擎上的排名以及符合時下跨載具的觀看便利性，於是將小學王原有的網站頁面RWD化。</p>
+										<a href="https://www.keys100.com.tw/index" target="_blank" class="text-btn text-btn_primary text-btn_lg">Show project</a>
 									</div>
 								</div>
 							</div>
@@ -276,9 +276,9 @@
 								</div>
 								<div class="col-lg-4 work_float offset-lg-7">
 									<div class="work_item_text work_item_text--left">
-										<h3 class="work_item_text_title">國中先修課程</h3>
-										<p class="work_item_text_intro">專案：國中先修課程<br>提供國小五、六年級生，免費國中銜接先修線上課程，幫助打好基礎，輕鬆銜接國中，迎接未來的升學挑戰！</p>
-										<a href="https://www.go100.com.tw/pages/pre_junior_activity/index.html" target="_blank" class="text-btn text-btn_primary text-btn_lg">Show project</a>
+										<h3 class="work_item_text_title">108新課綱將上路</h3>
+										<p class="work_item_text_intro">專案：108新課綱(十二年國教)<br>使用 wow.js 特效來使網頁增加為互動效果。</p>
+										<a href="https://iian0910.github.io/108syllabus_project/" target="_blank" class="text-btn text-btn_primary text-btn_lg">Show project</a>
 									</div>
 								</div>
 							</div>
